|06Sun Jan 11 19:05:31 PST 2015
|01============================

Well, here we are, after nearly a year we've finally released a new version of x/84, version 1.9.84.  This is a preview release for a final v2.0.

It's been a tough road, we've gotten a lot of new additions since the last release to pypi:

   - sftp and ssh server
   - intra-bbs messaging
   - web server
   - split screen chat
   - improved irc client
   - hacker news reader
   - ami/x artwork and styling
   - file browser
   - xmodem support
   - shroo.ms api for oneliners
   - voting booth
   - improved profile editor

Special thanks to |03haliphax|07 and |03hellbeard|07 and all the many folks of #1984 who have encouraged this release.

|06Mon Sep  1 02:49:05 PDT 2014
|01============================

There are now several boards running x/84:

    telnet://|02bloodisland.ph4.se|07
    telnet://|02bbs.beardy.se|07
    telnet://|02maze.io|07
    telnet://|02ufud.eu:6023|07
    telnet://|02oddnetwork.org|07

Special thanks to |03haliphax|07, |03hellbeard|07, |03beardy|07, |03maze|07, and |03megagumbo|07 for contributing to this release.  |03haliphax|07 and the team have contributed a web module with a json-formatted REST API that provides intra-bbs messaging.  With all the new activity on the message base, we're looking to improve it in the next release.

We're pounding out bugs and creating a more homogeneous style for the default board.  |03maze|07 has contributed solid cp437 and amiga topaz encoding for utf8 translations, and helped improve ssh.

Ssh support is complete -- you can ssh anonymous@, new@, or your_username@1984.ws and connect securely.  Ssh provides a lower latency than connection than telnet.  pubkey authentication is also supported.

|06Tue Apr  1 20:05:28 PDT 2014
|01============================

Release 1.1.0 has been reached -- 10 iterations!
